fix: edit shift with caps behavior

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.2s;
 }
 
 .key:hover {
@@ -38,7 +39,7 @@
 .key:active {
     box-shadow: 1px 1px 5px 1px black inset;
     background-color: #777;
-    transform: scale(0.90);
+    transform: scale(0.95);
 }
 
 .char {
